# data-processing-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/core/: abstract.py  data_process_framework.py
src/core/ABC/: data_reader.py  data_transformer.py  data_writer.py
src/models/: user_input_model.py  user_model.py
src/readers/: json_reader.py
src/transformer/: user_transformer.py
src/writers/: json_writer.py
tests/: test_framework.py  test_readers.py  test_transformer.py
