[project]
name = "data-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ijson>=3.4.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
